// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskCompletionFormContainer /> renders snapshot correctly 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-disableGutters MuiContainer-maxWidthLg"
  >
    <div
      class="MuiPaper-root WidgetBox-widgetBox-9 MuiPaper-outlined"
    />
  </div>
</div>
`;

exports[`<TaskCompletionFormContainer /> renders snapshot correctly on error state 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-disableGutters MuiContainer-maxWidthLg"
  >
    <div
      class="MuiPaper-root WidgetBox-widgetBox-46 MuiPaper-outlined"
    />
  </div>
</div>
`;
